--- a/package.json
+++ b/package.json
@@ -2,14 +2,33 @@
   "name": "bwd-react",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.2.1",
+    "camel-case": "^3.0.0",
+    "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.4.0",
+    "moment": "^2.23.0",
+    "node-sass-chokidar": "^1.3.4",
+    "npm-run-all": "^4.1.5",
+    "popper.js": "^1.14.6",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-scripts": "2.1.1"
+    "react-redux": "^6.0.0",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
+    "titleize": "^1.0.1"
   },
   "scripts": {
+    "build-css": "node-sass-chokidar ./src -o ./src",
+    "watch-css": "npm run build-css && node-sass-chokidar ./src -o ./src --watch --recursive",
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "dev": "npm-run-all -p watch-css start",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
