--- a/package.json
+++ b/package.json
@@ -6,19 +6,30 @@
   "dependencies": {
     "axios": "^0.18.0",
     "bootstrap": "^4.2.1",
+    "bootstrap-daterangepicker": "^3.0.3",
     "camel-case": "^3.0.0",
+    "classnames": "^2.2.6",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.4.0",
     "moment": "^2.23.0",
     "node-sass-chokidar": "^1.3.4",
     "npm-run-all": "^4.1.5",
     "popper.js": "^1.14.6",
+    "query-string": "^6.2.0",
     "react": "^16.7.0",
+    "react-bootstrap-daterangepicker": "^4.1.0",
     "react-dom": "^16.7.0",
+    "react-google-maps": "^9.4.5",
+    "react-image-crop": "^6.0.9",
     "react-redux": "^6.0.0",
+    "react-responsive-modal": "^3.5.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-stripe-elements": "^2.0.1",
+    "react-toastify": "^4.5.1",
     "redux": "^4.0.1",
+    "redux-form": "^8.1.0",
     "redux-thunk": "^2.3.0",
     "titleize": "^1.0.1"
   },
@@ -27,8 +38,8 @@
     "watch-css": "npm run build-css && node-sass-chokidar ./src -o ./src --watch --recursive",
     "start": "react-scripts start",
     "dev": "npm-run-all -p watch-css start",
-    "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "build": "react-scripts build",
+    "build-js": "npm-run-all build-css build-js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
